<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:background="@color/chi_gong">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_win_24"
        app:layout_constraintBottom_toTopOf="@+id/win_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/win_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard_down"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Alexandr_Kiss win!" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:foreground="@drawable/text_foreground"
        android:text="@string/scoreboard_new_game"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_board"
        app:layout_constraintEnd_toEndOf="@+id/result_board"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/result_board"
        app:layout_constraintTop_toBottomOf="@+id/win_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:foreground="@drawable/text_foreground"
        android:paddingHorizontal="16dp"
        android:text="@string/result_board"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game" />
</androidx.constraintlayout.widget.ConstraintLayout>